--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,148 @@
-sotopia
-gradio
-transformers
-torch
-peft
-bitsandbytes
+absl-py==2.1.0
+accelerate==0.29.3
+aiofiles==23.2.1
+aiohttp==3.9.5
+aiosignal==1.3.1
+altair==5.3.0
+annotated-types==0.6.0
+anyio==3.7.1
+attrs==23.2.0
+beartype==0.14.1
+bitsandbytes==0.43.1
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpickle==3.0.0
+contourpy==1.2.1
+cryptography==42.0.5
+cycler==0.12.1
+dataclasses-json==0.6.4
+datasets==2.18.0
+dill==0.3.8
+distro==1.9.0
+Farama-Notifications==0.0.4
+ffmpy==0.3.2
+filelock==3.13.4
+fonttools==4.51.0
+frozenlist==1.4.1
+fsspec==2024.2.0
+gin-config==0.5.0
+gradio==4.27.0
+gradio_client==0.15.1
+greenlet==3.0.3
+gymnasium==0.29.1
+h11==0.14.0
+hiredis==2.3.2
+httpcore==1.0.5
+httpx==0.27.0
+huggingface-hub==0.22.2
+idna==3.7
+importlib_metadata==7.1.0
+importlib_resources==6.4.0
+Jinja2==3.1.3
+jsonpatch==1.33
+jsonpointer==2.4
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+kiwisolver==1.4.5
+langchain==0.1.16
+langchain-community==0.0.33
+langchain-core==0.1.44
+langchain-openai==0.0.5
+langchain-text-splitters==0.0.1
+langsmith==0.1.48
+litellm==1.35.12
+lxml==4.9.4
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+marshmallow==3.21.1
+matplotlib==3.8.4
+mdurl==0.1.2
+more-itertools==10.2.0
+mpmath==1.3.0
+multidict==6.0.5
+multiprocess==0.70.16
+mypy==1.9.0
+mypy-extensions==1.0.0
+names==0.3.0
+networkx==3.3
+numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.19.3
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.1.105
+openai==1.22.0
+orjson==3.10.1
+packaging==23.2
+pandas==2.2.2
+pandas-stubs==2.2.1.240316
+peft==0.10.0
+pettingzoo==1.24.0
+pillow==10.3.0
+psutil==5.9.8
+pyarrow==15.0.2
+pyarrow-hotfix==0.6
+pycparser==2.22
+pydantic==2.7.0
+pydantic_core==2.18.1
+pydub==0.25.1
+Pygments==2.17.2
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-multipart==0.0.9
+python-ulid==1.1.0
+pytz==2024.1
+PyYAML==6.0.1
+redis==5.0.3
+referencing==0.34.0
+regex==2024.4.16
+requests==2.31.0
+rich==13.7.1
+rpds-py==0.18.0
+ruff==0.3.7
+safetensors==0.4.3
+scipy==1.13.0
+semantic-version==2.10.0
+shellingham==1.5.4
+six==1.16.0
+sniffio==1.3.1
+SQLAlchemy==2.0.29
+sseclient-py==1.8.0
+starlette==0.27.0
+sympy==1.12
+tabulate==0.9.0
+tenacity==8.2.3
+tiktoken==0.5.2
+tokenizers==0.19.1
+tomlkit==0.12.0
+toolz==0.12.1
+torch==2.2.2
+tqdm==4.66.2
+transformers==4.40.0
+triton==2.2.0
+typer==0.12.3
+types-cffi==1.16.0.20240331
+types-pyOpenSSL==24.0.0.20240417
+types-pytz==2024.1.0.20240417
+types-redis==4.6.0.20240417
+types-setuptools==69.5.0.20240415
+types-tqdm==4.66.0.20240417
+typing-inspect==0.9.0
+typing_extensions==4.11.0
+tzdata==2024.1
+urllib3==2.2.1
+uvicorn==0.23.2
+websockets==11.0.3
+xxhash==3.4.1
+yarl==1.9.4
+zipp==3.18.1
