--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ annotated-types==0.6.0
 anyio==3.7.1
 attrs==23.2.0
 beartype==0.14.1
-bitsandbytes==0.43.1
+bitsandbytes==0.42.0
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
@@ -68,18 +68,18 @@ mypy-extensions==1.0.0
 names==0.3.0
 networkx==3.3
 numpy==1.26.4
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.19.3
-nvidia-nvjitlink-cu12==12.4.127
-nvidia-nvtx-cu12==12.1.105
+# nvidia-cublas-cu12==12.1.3.1
+# nvidia-cuda-cupti-cu12==12.1.105
+# nvidia-cuda-nvrtc-cu12==12.1.105
+# nvidia-cuda-runtime-cu12==12.1.105
+# nvidia-cudnn-cu12==8.9.2.26
+# nvidia-cufft-cu12==11.0.2.54
+# nvidia-curand-cu12==10.3.2.106
+# nvidia-cusolver-cu12==11.4.5.107
+# nvidia-cusparse-cu12==12.1.0.106
+# nvidia-nccl-cu12==2.19.3
+# nvidia-nvjitlink-cu12==12.4.127
+# nvidia-nvtx-cu12==12.1.105
 openai==1.22.0
 orjson==3.10.1
 packaging==23.2
@@ -129,7 +129,7 @@ toolz==0.12.1
 torch==2.2.2
 tqdm==4.66.2
 transformers==4.40.0
-triton==2.2.0
+# triton==2.2.0
 typer==0.12.3
 types-cffi==1.16.0.20240331
 types-pyOpenSSL==24.0.0.20240417
